fix: align links

--- a/src/app/core/pages/welcome-page/welcome-page.component.scss
+++ b/src/app/core/pages/welcome-page/welcome-page.component.scss
@@ -26,4 +26,5 @@
 }
 .author {
   list-style: none;
+  text-align: center;
 }
